--- a/index.html
+++ b/index.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
+    <!-- ================ meta tags ================ -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <!-- ================ remix Icons Library ================ -->
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
+
+    <!-- ================ css ================ -->
+    <link rel="stylesheet" href="./style.css">
+    <!-- ================ title ================ -->
+    <title>Home | Countries</title>
 </head>
 <body>
+    <!-- ================ header ================ -->
+    <header class="header" id="header">
+
+    </header>
+
+    <!-- ================ main ================ -->
+    <main class="main" id="main">
+
+    </main>
+
+    <!-- ================ footer ================ -->
+    <footer class="footer" id="footer">
+
+    </footer>
+
+
+    <!-- js -->
     <script src="./js/fetch.js"></script>
 </body>
 </html>
