--- a/index.html
+++ b/index.html
@@ -18,7 +18,28 @@
 <body>
     <!-- ================ header ================ -->
     <header class="header" id="header">
+        <nav class="nav">
+            <a href="#" class="nav-logo"><span>UC</span>Maps</a>
+            <div class="nav-menu" id="nav-menu">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#" class="nav-link">Home</a></li>                    
+                    <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+                </ul>
+            </div>
 
+            <div class="nav__toggle" id="nav-toggle">
+                <i class="ri-menu-3-line"></i>
+            </div>
+
+            <!-- search -->
+            <div class="search-box">
+                <input type="text" class="search-text" placeholder="Enter Country">
+                <a href="#" class="search-btn">
+                    <i class="ri-search-line"></i>
+                </a>
+            </div>
+
+        </nav>
     </header>
 
     <!-- ================ main ================ -->
