--- a/index.html
+++ b/index.html
@@ -22,13 +22,9 @@
             <a href="#" class="nav-logo"><span>UC</span>Maps</a>
             <div class="nav-menu" id="nav-menu">
                 <ul class="nav-list">
-                    <li class="nav-item"><a href="#" class="nav-link">Home</a></li>                    
+                    <li class="nav-item"><a href="#home" class="nav-link active-link">Home</a></li>                    
                     <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
                 </ul>
-            </div>
-
-            <div class="nav__toggle" id="nav-toggle">
-                <i class="ri-menu-3-line"></i>
             </div>
 
             <!-- search -->
@@ -38,7 +34,10 @@
                     <i class="ri-search-line"></i>
                 </a>
             </div>
-
+            <!-- toggle -->
+            <div class="nav-toggle" id="nav-toggle">
+                <i class="ri-menu-3-line"></i>
+            </div>
         </nav>
     </header>
 
@@ -54,6 +53,8 @@
 
 
     <!-- js -->
+    <script src="./js/dom.js"></script>
     <script src="./js/fetch.js"></script>
+    <script src="./js/logic.js"></script>
 </body>
 </html>
