--- a/index.html
+++ b/index.html
@@ -39,6 +39,18 @@
                 <i class="ri-menu-3-line"></i>
             </div>
         </nav>
+
+        <section class="home" id="home">
+            <div class="home-container">
+                <div class="home-data">
+                    <h1 class="home-title">UC Maps Countries in The World</h1>
+                    <h2 class="home-subtitle">Search for The Country to Show You All <br>Tts Universities.</h2>
+                    <a href="#" class="button">READ MORE</a>
+                </div>
+
+                <img src="./img/home-img.avif" alt="University">
+            </div>
+        </section>
     </header>
 
     <!-- ================ main ================ -->
