--- a/index.html
+++ b/index.html
@@ -39,7 +39,10 @@
                 <i class="ri-menu-3-line"></i>
             </div>
         </nav>
+    </header>
 
+    <!-- ================ main ================ -->
+    <main class="main" id="main">
         <section class="home" id="home">
             <div class="home-container">
                 <div class="home-data">
@@ -48,14 +51,9 @@
                     <a href="#" class="button">READ MORE</a>
                 </div>
 
-                <img src="./img/home-img.avif" alt="University">
+                <img src="./img/home-img.avif" class="home-img" alt="University">
             </div>
         </section>
-    </header>
-
-    <!-- ================ main ================ -->
-    <main class="main" id="main">
-
     </main>
 
     <!-- ================ footer ================ -->
