editing place search-box in right side

--- a/index.html
+++ b/index.html
@@ -27,16 +27,19 @@
                 </ul>
             </div>
 
-            <!-- search -->
-            <div class="search-box">
-                <input type="text" class="search-text" placeholder="Enter Country">
-                <a href="#" class="search-btn">
-                    <i class="ri-search-line"></i>
-                </a>
-            </div>
-            <!-- toggle -->
-            <div class="nav-toggle" id="nav-toggle">
-                <i class="ri-menu-3-line"></i>
+            <div class="right-side">
+                <!-- search -->
+                <div class="search-box">
+                    <input type="text" class="search-text" placeholder="Enter Country">
+                    <a href="#" class="search-btn">
+                        <i class="ri-search-line"></i>
+                    </a>
+                </div>
+
+                <!-- toggle -->
+                <div class="nav-toggle" id="nav-toggle">
+                    <i class="ri-menu-3-line"></i>
+                </div>
             </div>
         </nav>
     </header>
