create card in dom without style relates #3

--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
                 <img src="./img/home-img.avif" class="home-img" alt="University">
             </div>
+            <section class="card-section">
+            </section>
         </section>
     </main>
 
@@ -66,8 +68,8 @@
 
 
     <!-- js -->
-    <script src="./js/dom.js"></script>
     <script src="./js/fetch.js"></script>
     <script src="./js/logic.js"></script>
+    <script src="./js/dom.js"></script>
 </body>
 </html>
