adding cards of countries in main page

--- a/index.html
+++ b/index.html
@@ -56,8 +56,15 @@
 
                 <img src="./img/home-img.avif" class="home-img" alt="University">
             </div>
-            <section class="card-section">
-            </section>
+        </section>
+
+        <section class="countries">
+            <span class="section-subtitle">Countries</span>
+            <h2 class="section-title">Random of Countries</h2>
+
+            <div class="card-countries">
+                
+            </div>
         </section>
     </main>
 
