adding main for university page using dom and get data

--- a/university/index.html
+++ b/university/index.html
@@ -60,7 +60,10 @@
 
         <section class="section countries">
             <span class="section-subtitle">University</span>
-
+            
+            <div class="card-university">
+                
+            </div>
         </section>
     </main>
 
