add search logic for country page and universty page relates #14

--- a/university/index.html
+++ b/university/index.html
@@ -29,12 +29,12 @@
 
             <div class="right-side">
                 <!-- search -->
-                <div class="search-box">
-                    <input type="text" class="search-text" placeholder="Enter Country">
+                <form class="search-box-un">
+                    <input type="text" class="search-text-un" placeholder="Enter Country">
                     <a href="#" class="search-btn">
                         <i class="ri-search-line"></i>
                     </a>
-                </div>
+                </form>
 
                 <!-- toggle -->
                 <div class="nav-toggle" id="nav-toggle">
