--- a/index.html
+++ b/index.html
@@ -29,12 +29,13 @@
 
             <div class="right-side">
                 <!-- search -->
-                <div class="search-box">
+                <form class="search-box">
+
                     <input type="text" class="search-text" placeholder="Enter Country">
                     <a href="#" class="search-btn">
                         <i class="ri-search-line"></i>
                     </a>
-                </div>
+                </form>
 
                 <!-- toggle -->
                 <div class="nav-toggle" id="nav-toggle">
