adding footer page for landing page and university page

--- a/index.html
+++ b/index.html
@@ -70,10 +70,9 @@
     </main>
 
     <!-- ================ footer ================ -->
-    <footer class="footer" id="footer">
-
+    <footer class="footer section" id="footer">
+        <p class="footer-copy">&#169; 2022 | All right reserved</p>
     </footer>
-
 
     <!-- js -->
     <script src="./js/fetch.js"></script>
