--- a/university/index.html
+++ b/university/index.html
@@ -68,8 +68,8 @@
     </main>
 
     <!-- ================ footer ================ -->
-    <footer class="footer" id="footer">
-
+    <footer class="footer section" id="footer">
+        <p class="footer-copy">&#169; 2022 | All right reserved</p>
     </footer>
 
 
