adding responsive design in page

--- a/university/index.html
+++ b/university/index.html
@@ -30,7 +30,7 @@
             <div class="right-side">
                 <!-- search -->
                 <form class="search-box-un">
-                    <input type="text" class="search-text-un" placeholder="Enter Country">
+                    <input type="text" class="search-text-un" placeholder="Enter University">
                     <a href="#" class="search-btn">
                         <i class="ri-search-line"></i>
                     </a>
@@ -46,7 +46,7 @@
 
     <!-- ================ main ================ -->
     <main class="main" id="main">
-        <section class="section home" id="home">
+        <section class="home" id="home">
             <div class="home-container">
                 <div class="home-data">
                     <h1 class="home-title">UC Maps University in your Country</h1>
@@ -58,9 +58,10 @@
             </div>
         </section>
 
-        <section class="section countries">
+        <section class="countries">
             <span class="section-subtitle">University</span>
-            
+            <h2 class="section-title">Search of University</h2>
+
             <div class="card-university">
                 
             </div>
