--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <!-- ================ main ================ -->
     <main class="main" id="main">
-        <section class="section home" id="home">
+        <section class="home" id="home">
             <div class="home-container">
                 <div class="home-data">
                     <h1 class="home-title">UC Maps Countries in The World</h1>
@@ -59,7 +59,7 @@
             </div>
         </section>
 
-        <section class="section countries">
+        <section class="countries">
             <span class="section-subtitle">Countries</span>
             <h2 class="section-title">Random of Countries</h2>
 
