upload files after fix bugs

--- a/index.html
+++ b/index.html
@@ -30,8 +30,7 @@
             <div class="right-side">
                 <!-- search -->
                 <form class="search-box">
-
-                    <input type="text" class="search-text" placeholder="Enter Country">
+                    <input type="text" class="search-text" id="searchBar" placeholder="Enter Country">
                     <a href="#" class="search-btn">
                         <i class="ri-search-line"></i>
                     </a>
