--- a/university/index.html
+++ b/university/index.html
@@ -30,7 +30,7 @@
             <div class="right-side">
                 <!-- search -->
                 <form class="search-box-un">
-                    <input type="text" class="search-text-un" placeholder="Enter University">
+                    <input type="text" class="search-text-un" id="searchBar" placeholder="Enter University">
                     <a href="#" class="search-btn">
                         <i class="ri-search-line"></i>
                     </a>
